# fleet-battle

./: CMakeLists.txt  attack.hpp  game.cpp  game.hpp  main.cpp
abilities/: attack.hpp
models/: fleet.cpp  fleet.hpp  ocean.cpp  ocean.hpp  player.cpp  player.h  ship.cpp  ship.hpp
ships/: cruiserShip.cpp  cruiserShip.hpp  destroyerShip.cpp  destroyerShip.hpp  hunterShip.cpp  hunterShip.hpp
utils/: die.cpp  die.hpp  input.cpp  input.hpp
